--- a/LimitlessCaverns/LimitlessCaverns-Info.plist
+++ b/LimitlessCaverns/LimitlessCaverns-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.getdropbox.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.dropbox.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -23,13 +23,11 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>com.dropbox</string>
+			<string>com.getdropbox.LimitlessCaverns</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>guesswhodropbox</string>
+				<string>GuessWho</string>
 			</array>
 		</dict>
 	</array>
@@ -53,17 +51,6 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLName</key>
-			<string>com.getdropbox.LimitlessCaverns</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>GuessWho</string>
-			</array>
-		</dict>
 	</array>
 </dict>
 </plist>
